style.css
html body{
  margin-top: 40px;
  background-color: #21C3D8;
}

.interface-background{
  margin-top: 20px;
  padding-top: 20px;
  padding-bottom: 20px;
  background-color: rgb(27,30,45);
  outline: 3px outset rgb(32,87,213);
}

#separator{
  margin-left: 15px;
  margin-right: 15px;
}

.row-eq-height-md {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display:         flex;
    flex-direction: column;
}
@media (min-width:992px) {
    .row-eq-height-md {
        flex-direction: row;
    }
}

#word-to-guess{
  margin-bottom: auto;
  font-size: 30px;
  color: rgb(120, 120, 120);
}

#header-block{
  outline-width: 5px;
}

.letter{
   box-shadow:10px 10px 20px #000;
}

.button-container{
}

.letters-row{
  line-height: 50px;

  padding: 5px;
  cursor: pointer;
}

.margined-button{
  padding-left: 5px !important;
  padding-right: 5px !important;
}

.cursor-normal{
  cursor: default !important;
}

